# seizmeia

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  seizmeia.yml  setup.cfg  tox.ini
.github/workflows/: publish.yml  test.yml
seizmeia/: __main__.py  config.py  db.py  health.py  settings.py  user.py  uvicorn.py  version.py
seizmeia/server/: __init__.py  config.py  health.py  version.py
seizmeia/server/auth/: config.py  user.py
seizmeia/token/: encode.py  route.py  schemas.py
seizmeia/user/: config.py  db.py  password.py  routes.py  schemas.py  security.py  token.py
seizmeia/user/auth/: config.py  password.py  token.py
server/: __init__.py  __main__.py
tests/: auth_test.py  health.py  health_test.py  test_auth.py  test_health.py  test_server.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  main.tsx
web/src/Auth/: Login.tsx  SignIn.tsx
web/src/context/: UserCtx.tsx
