[build-system]
requires = ["setuptools~=60.5", "wheel~=0.37.1"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
src_paths = ["seizmeia", "tests"]
add_imports = ["from __future__ import annotations"]

[tool.mypy]
python_version = "3.10"
