[metadata]
name         = seizmeia
version      = 0.0.1
author       = Diogo Correia, Simão Matos
author_email = dv_correia@hotmail.com, simaopedromats@gmail.com
license      = MIT
platforms    = any
description  = A credit management tool for a beer tap.
long_description = file: README.md
long_description_content_type = text/markdown
keywords     = beer, tap, management
url = https://github.com/seizmeia/seizmeia
project_urls =
    Source Code = https://github.com/seizmeia/seizmeia
    Bug Reports = https://github.com/seizmeia/seizmeia/issues
classifier =
    Development Status :: 1 - Planning
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10

[options]
packages = find:
    
[options.entry_points]
console_scripts =
    seizmeia = seizmeia:run

[tool:pytest]
asyncio_mode = strict
testpaths =
    tests